@@ -1,7 +1,7 @@
 /*
  *  Mathlib : A C Library of Special Functions
+ *  Copyright (C) 2000-2019 The R Core Team
  *  Copyright (C) 1998 Ross Ihaka
- *  Copyright (C) 2000-2018 The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -35,8 +35,6 @@ double fround(double x, double digits) {
 #define MAX_DIGITS DBL_MAX_10_EXP
     /* = 308 (IEEE); was till R 0.99: (DBL_DIG - 1) */
     /* Note that large digits make sense for very small numbers */
-    LDOUBLE pow10, sgn, intx;
-    int dig;
 
     if (ISNAN(x) || ISNAN(digits))
 	return x + digits;
@@ -46,20 +44,26 @@ double fround(double x, double digits) {
     else if(digits == ML_NEGINF) return 0.0;
 
     if (digits > MAX_DIGITS) digits = MAX_DIGITS;
-    dig = (int)floor(digits + 0.5);
+
+    int dig = (int)floor(digits + 0.5);
+    LDOUBLE sgn = +1.;
     if(x < 0.) {
 	sgn = -1.;
 	x = -x;
-    } else
-	sgn = 1.;
+    }
     if (dig == 0) {
 	return (double)(sgn * nearbyint(x));
     } else if (dig > 0) {
-        pow10 = R_pow_di(10., dig);
-	intx = floor(x);
+	LDOUBLE pow10 = R_pow_di(10., dig)
+#ifdef R_3_AND_OLDER
+	    , intx = floor(x);
 	return (double)(sgn * (intx + nearbyint((double)((x-intx) * pow10)) / pow10));
+#else
+	;
+	return (double)(sgn * (nearbyint((double)(x * pow10)) / pow10));
+#endif
     } else {
-        pow10 = R_pow_di(10., -dig);
+	LDOUBLE pow10 = R_pow_di(10., -dig);
         return (double)(sgn * nearbyint((double)(x/pow10)) * pow10);
     }
 }
